--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-tensorflow
-opencv-python
-numpy
-matplotlib
-pandas
-scikit-learn
+tensorflow==2.13.0
+keras==2.13.1
+numpy==1.24.0
+opencv-python==4.8.0.74
+matplotlib==3.7.1
+scikit-learn==1.3.0
+
 
